Filter displacement bug on 1700px screens and bigger fixed but tight. Page name on each section aligned with content grid/container. Scroll animation deactivated for prototype share. Nav menu acceleration reduced.

--- a/app/scss/global/_default.scss
+++ b/app/scss/global/_default.scss
@@ -70,7 +70,7 @@ canvas{
 	&.has-menu{
 		padding-right: 140px;
 
-		@media (min-width: 1700px){
+		@include fulldesktop {
 			padding-right: 0;
 		}
 		
@@ -95,9 +95,10 @@ canvas{
 		top: 15px;
 		// right: 6%;
 		// right: 3.3%;
-		right: 4%;
+		right: 15px;
 
 		@include desktop {
+			// right: 4%;
 			top: 50px;
 		}
 
