--- a/app/scss/modules/_nav-menu.scss
+++ b/app/scss/modules/_nav-menu.scss
@@ -9,7 +9,7 @@
 	// overflow: hidden;
 	color: $black-gray;
 	z-index: 11;
-	transition: all 300ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+	transition: all 900ms cubic-bezier(0.33, 0, 0.140, 1.000);
 	transition-delay: 450ms;
 
 	@include desktop {
@@ -159,7 +159,7 @@
 
 				&.active {
 					pointer-events: auto;
-					transition: all 600ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+					transition: all 600ms cubic-bezier(0.33, 0, 0.140, 1.000);
 					opacity: 1;
 					transform: translateY(0px);
 				}
@@ -226,12 +226,12 @@
 		background-color: #1a1a1a;
 		width: 100%;
 		height: 100%;
-		transition: transform 800ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+		transition: transform 800ms cubic-bezier(0.33, 0, 0.140, 1.000);
 		transition-delay: 300ms;
 		transform: translate(0%, 100%);
 
 		@include desktop {
-			transition: transform 800ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+			transition: transform 800ms cubic-bezier(0.33, 0, 0.140, 1.000);
 			transition-delay: 400ms;
 			transform: translate(100%, 0%);
 		}
@@ -239,16 +239,17 @@
 	}
 
 	&.opened {
-		color: #fff;
 		transition-delay: 0ms;
+		transition: transform 1400ms cubic-bezier(0.33, 0, 0.140, 1.000);
 		z-index: 100;
+		color: #fff;
 
 		@include desktop {
 			border-left: 1px solid rgba(255, 255, 255, .1);
 		}
 
 		&:before {
-			transition: transform 300ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+			transition: transform 700ms cubic-bezier(0.33, 0, 0.140, 1.000);
 			transform: translate(0%, 0%);
 			transition-delay: 0ms;
 		}
@@ -302,7 +303,7 @@
 	background-color: $menu-bg;
 	pointer-events: none;
 	z-index: 10;
-	transition: transform 400ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+	transition: transform 1200ms cubic-bezier(0.33, 0, 0.140, 1.000);
 	transition-delay: 100ms;
 	transform: translate(0%, 100%);
 
@@ -320,7 +321,7 @@
 	}
 
 	.responsive-container {
-		transition: opacity 400ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+		transition: opacity 400ms cubic-bezier(0.33, 0, 0.140, 1.000);
 		transition-delay: 0ms;
 		opacity: 0;
 		position: absolute;
@@ -579,7 +580,7 @@
 	transition: all 100ms linear;
 
 	&.active {
-		transition: all 600ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+		transition: all 600ms cubic-bezier(0.33, 0, 0.140, 1.000);
 		opacity: 1;
 		transform: translateY(0px);
 	}
